--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,13 @@
   "description": "application TypeScript starter repository",
   "license": "MIT",
   "scripts": {
+    "start": "node ./dist/modules/default/main.js",
     "build": "tsc -p tsconfig.build.json",
     "clean": "ts-clean",
     "lint": "tslint --fix -p tsconfig.json -c tslint.json"
   },
   "_moduleAliases": {
-    "@": "."
+    "@": ".src"
   },
   "dependencies": {
     "@koa/cors": "^2.2.3",
@@ -31,7 +32,7 @@
     "koa-static": "^5.0.0",
     "koa-unless": "^1.0.7",
     "log4js": "^4.0.1",
-    "module-alias": "^2.2.2",
+    "module-alias": "^2.2.3",
     "moment": "^2.24.0",
     "mysql": "^2.16.0",
     "reflect-metadata": "^0.1.12",
@@ -43,25 +44,25 @@
     "ws": "^7.2.0"
   },
   "devDependencies": {
+    "@types/cron": "^1.6.0",
+    "@types/glob": "^7.1.1",
     "@types/ioredis": "^4.0.6",
     "@types/joi": "^14.3.1",
     "@types/jsonwebtoken": "^8.3.0",
     "@types/koa": "^2.0.48",
     "@types/koa-bodyparser": "^4.2.2",
+    "@types/koa-helmet": "^3.1.2",
     "@types/koa-logger": "^3.1.1",
+    "@types/koa-mount": "^3.0.1",
+    "@types/koa-router": "^7.0.37",
     "@types/koa-session": "^5.10.0",
+    "@types/koa-static": "^4.0.0",
     "@types/log4js": "^2.3.5",
     "@types/mysql": "^2.15.5",
     "@types/node": "^10.12.21",
     "@types/sqlstring": "^2.2.1",
-    "@types/uuid": "^3.4.4",
-    "@types/cron": "^1.6.0",
-    "@types/glob": "^7.1.1",
-    "@types/koa-helmet": "^3.1.2",
-    "@types/koa-mount": "^3.0.1",
-    "@types/koa-router": "^7.0.37",
-    "@types/koa-static": "^4.0.0",
     "@types/swagger-ui-dist": "^3.0.0",
+    "@types/uuid": "^3.4.4",
     "koa-bodyparser": "^4.2.1",
     "prettier": "^1.16.3",
     "ts-clean": "^1.0.2",
