--- a/web/.env.production.example
+++ b/web/.env.production.example
@@ -2,6 +2,6 @@
 ENV = 'production'
 
 # base api
-VUE_APP_BASE_API = ''
+VUE_APP_BASE_API = 'http://localhost:9317'
 VUE_APP_WS_HOST = 'ws://localhost:9317'
 
