--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "start": "node ./dist/modules/default/main.js",
     "build": "tsc -p tsconfig.build.json",
+    "build:watch": "tsc -w -p tsconfig.build.json",
+    "build:dev": "nodemon dist/modules/default/main.js",
+    "dev": "nodemon --exec 'ts-node -P tsconfig.build.json -r tsconfig-paths/register' src/modules/default/main.ts",
     "clean": "ts-clean",
     "lint": "tslint --fix -p tsconfig.json -c tslint.json"
   },
@@ -64,7 +67,7 @@
     "prettier": "^1.16.3",
     "ts-clean": "^1.0.2",
     "ts-node": "^7.0.1",
-    "tsconfig-paths": "^3.7.0",
+    "tsconfig-paths": "^3.14.2",
     "tslint": "5.12.1",
     "typescript": "^3.3.1"
   }
