--- a/server/package.json
+++ b/server/package.json
@@ -41,6 +41,7 @@
     "sqlstring": "^2.3.1",
     "swagger-ui-dist": "^3.20.5",
     "uuid": "^3.3.2",
+    "websocket": "^1.0.34",
     "ws": "^7.2.0"
   },
   "devDependencies": {
@@ -63,7 +64,9 @@
     "@types/sqlstring": "^2.2.1",
     "@types/swagger-ui-dist": "^3.0.0",
     "@types/uuid": "^3.4.4",
+    "@types/websocket": "^1.0.6",
     "koa-bodyparser": "^4.2.1",
+    "nodemon": "^3.0.1",
     "prettier": "^1.16.3",
     "ts-clean": "^1.0.2",
     "ts-node": "^7.0.1",
