--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "@types/ws": "^6.0.3",
     "assign-deep": "^1.0.0",
     "cron": "^1.6.0",
+    "dotenv": "^16.3.1",
     "glob": "^7.1.3",
     "ioredis": "^4.6.2",
     "joi": "^14.3.1",
