--- a/server/.env.example
+++ b/server/.env.example
@@ -4,3 +4,7 @@ DB_USER=root
 DB_PASSWORD=123321
 DB_NAME=cloud_auto
 DB_DEBUG=false
+
+VSCODE_EXT_PROXY_ON=true
+VSCODE_EXT_IP=localhost
+VSCODE_EXT_PORT=9317
