--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -16,5 +16,5 @@
     }
   },
   "exclude": ["node_modules"],
-  // "include": ["src/**/*", "node_modules/souljs/lib/", "node_modules/soul-orm/lib/"]
+  "include": ["src/**/*"]
 }
