--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "application-starter",
+  "name": "autojs-web-control-server",
   "version": "1.0.0",
   "description": "application TypeScript starter repository",
   "license": "MIT",
