--- a/web/package.json
+++ b/web/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "vue-admin-template",
-  "version": "4.2.1",
+  "name": "autojs-web-control-web",
+  "version": "1.0.0",
   "description": "A vue admin template with Element UI & axios & iconfont & permission control & lint",
   "author": "Pan <panfree23@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "node build/index.js",
+    "start": "node build/index.js --production",
     "dev": "vue-cli-service serve",
-    "build:prod": "vue-cli-service build",
+    "build": "vue-cli-service build",
+    "build:prod": "vue-cli-service build --mode production",
     "build:stage": "vue-cli-service build --mode staging",
     "preview": "node build/index.js --preview",
     "lint": "eslint --ext .js,.vue src",
