--- a/web/.env.development
+++ b/web/.env.development
@@ -1,6 +1,7 @@
 # just a flag
 ENV = 'development'
 
+VUE_APP_PORT = 9526
 # base api
 VUE_APP_BASE_API = 'http://localhost:9319'
 VUE_APP_WS_HOST = 'ws://localhost:9319'
