--- a/web/package.json
+++ b/web/package.json
@@ -6,10 +6,11 @@
   "license": "MIT",
   "scripts": {
     "start": "node build/index.js --production",
+    "start:env": "node build/index.js --env",
     "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "build:prod": "vue-cli-service build --mode production",
-    "build:stage": "vue-cli-service build --mode staging",
+    "build:docker": "vue-cli-service build --mode docker",
     "preview": "node build/index.js --preview",
     "lint": "eslint --ext .js,.vue src",
     "lint2": "eslint --fix --ext .js,.vue src",
@@ -50,6 +51,7 @@
     "eslint-plugin-vue": "5.2.2",
     "html-webpack-plugin": "3.2.0",
     "mockjs": "1.0.1-beta3",
+    "replace-in-file": "^7.0.1",
     "runjs": "^4.3.2",
     "sass": "^1.68.0",
     "sass-loader": "^7.1.0",
