ci(docker): 新增三个web端环境变量

--- a/docker/.example.env
+++ b/docker/.example.env
@@ -8,3 +8,7 @@ DB_DEBUG=false
 VSCODE_EXT_PROXY_ON=true
 VSCODE_EXT_IP=localhost
 VSCODE_EXT_PORT=9317
+
+WEB_PORT=9528
+WEB_BASE_API=http://localhost:9319
+WEB_WS_HOST=ws://localhost:9319
