--- a/docker/Dockerfile-prod
+++ b/docker/Dockerfile-prod
@@ -11,7 +11,7 @@ ADD ./web/package.json ./web/package-lock.json ./web/
 RUN npm set progress=false
 RUN cd /app/${PROJECT_NAME}/server && npm install --only=production --registry=https://registry.npmmirror.com \
   && cd /app/${PROJECT_NAME}/web && npm install --only=production --registry=https://registry.npmmirror.com \
-  && npm install runjs chalk --registry=https://registry.npmmirror.com
+  && npm install runjs chalk replace-in-file --registry=https://registry.npmmirror.com
 # ADD ./server/package.json ./server/package-lock.json ./server_deps/
 # ADD ./web/package.json ./web/package-lock.json ./web_deps/
 # RUN npm set progress=false
@@ -43,9 +43,12 @@ ENV DB_HOST=localhost \
   DB_NAME=cloud_auto \
   DB_DEBUG=false \
   SERVER_LOG_LEVEL=DEBUG \
-  VSCODE_EXT_PROXY_ON=true \
+  VSCODE_EXT_PROXY_ON=false \
   VSCODE_EXT_IP=localhost \
-  VSCODE_EXT_PORT=9317
+  VSCODE_EXT_PORT=9317 \
+  WEB_PORT=9528 \
+  WEB_BASE_API=http://47.108.180.116:9319 \
+  WEB_WS_HOST=ws://47.108.180.116:9319
 RUN chmod +x ./docker-entrypoint.sh
 ENTRYPOINT [ "bash", "docker-entrypoint.sh" ]
 # ENTRYPOINT ["echo", "Hello user"]
