feat(server-script): 新增script自动监视目录，可以自动入库

--- a/server/.env.example
+++ b/server/.env.example
@@ -5,6 +5,7 @@ DB_PASSWORD=123321
 DB_NAME=cloud_auto
 DB_DEBUG=false
 SERVER_LOG_LEVEL=INFO
+SERVER_SCRIPT_DIR=./scripts
 
 VSCODE_EXT_PROXY_ON=true
 VSCODE_EXT_IP=localhost
