--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "@koa/cors": "^2.2.3",
     "@types/ws": "^6.0.3",
     "assign-deep": "^1.0.0",
+    "chokidar": "^3.5.3",
     "cron": "^1.6.0",
     "dotenv": "^16.3.1",
     "glob": "^7.1.3",
