feat(docker): 修复路径问题，添加server scripts目录映射

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -17,7 +17,8 @@ services:
     env_file:
       - .env
     volumes:
-      - /data/server/log:/app/autojs-web-control/server/log
+      - ./data/server/log:/app/autojs-web-control/server/log
+      - ./data/server/scripts:/app/autojs-web-control/server/scripts
     ports:
       - 9319:9319 # Web UI
     restart: unless-stopped
