fix(server): 脚本监控默认方式不生效，使用CHOKIDAR_USEPOLLING=1

--- a/server/.env.example
+++ b/server/.env.example
@@ -6,6 +6,7 @@ DB_NAME=cloud_auto
 DB_DEBUG=false
 SERVER_LOG_LEVEL=INFO
 SERVER_SCRIPT_DIR=./scripts
+CHOKIDAR_USEPOLLING=1
 
 VSCODE_EXT_PROXY_ON=true
 VSCODE_EXT_IP=localhost
