--- a/docker/.example.env
+++ b/docker/.example.env
@@ -4,6 +4,8 @@ DB_USER=root
 DB_PASSWORD=123321
 DB_NAME=cloud_auto
 DB_DEBUG=false
+SERVER_SCRIPT_DIR=./scripts
+CHOKIDAR_USEPOLLING=1
 
 VSCODE_EXT_PROXY_ON=true
 VSCODE_EXT_IP=localhost
