--- a/docker/.example.env
+++ b/docker/.example.env
@@ -6,6 +6,7 @@ DB_NAME=cloud_auto
 DB_DEBUG=false
 SERVER_SCRIPT_DIR=./scripts
 CHOKIDAR_USEPOLLING=1
+SERVER_SCRIPT_POLLING_INTERVAL=10000
 
 VSCODE_EXT_PROXY_ON=true
 VSCODE_EXT_IP=localhost
