--- a/server/.env.example
+++ b/server/.env.example
@@ -6,6 +6,7 @@ DB_NAME=cloud_auto
 DB_DEBUG=false
 SERVER_LOG_LEVEL=INFO
 SERVER_SCRIPT_DIR=./scripts
+SERVER_SCRIPT_POLLING_INTERVAL=10000
 CHOKIDAR_USEPOLLING=1
 
 VSCODE_EXT_PROXY_ON=true
