feat(server): LogcatManager初步，将script写入日志文件；log4js重新配置

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,14 +5,13 @@
     "removeComments": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "es6",
+    // "lib": [],
+    "target": "ES6",
     "sourceMap": false,
     "outDir": "./",
     "baseUrl": "./",
     "paths": {
-      "@/*":[
-        "./src/*"
-      ]
+      "@/*": ["./src/*"]
     }
   },
   "exclude": ["node_modules"],
