--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "assign-deep": "^1.0.0",
     "chokidar": "^3.5.3",
     "cron": "^1.6.0",
+    "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "glob": "^7.1.3",
     "ioredis": "^4.6.2",
