feat(server): 新增SERVER_EXPIRES_HOUR、SERVER_SECRET环境变量

--- a/docker/.example.env
+++ b/docker/.example.env
@@ -4,6 +4,8 @@ DB_USER=root
 DB_PASSWORD=123321
 DB_NAME=cloud_auto
 DB_DEBUG=false
+SERVER_SECRET=
+SERVER_EXPIRES_HOUR=6
 SERVER_SCRIPT_DIR=./scripts
 CHOKIDAR_USEPOLLING=1
 SERVER_SCRIPT_POLLING_INTERVAL=10000
