--- a/docker/Dockerfile-prod
+++ b/docker/Dockerfile-prod
@@ -45,6 +45,8 @@ ENV DB_HOST=localhost \
   WEB_PORT=9528 \
   WEB_BASE_API=http://47.108.180.116:9319 \
   WEB_WS_HOST=ws://47.108.180.116:9319 \
+  SERVER_SECRET=xxx&T1G*sd3 \
+  SERVER_EXPIRES_HOUR=6 \
   SERVER_SCRIPT_DIR=./scripts \
   CHOKIDAR_USEPOLLING=1 \
   SERVER_SCRIPT_POLLING_INTERVAL=10000
@@ -54,3 +56,5 @@ ENTRYPOINT [ "bash", "docker-entrypoint.sh" ]
 EXPOSE 9319
 EXPOSE 9528
 CMD [ "--server", "--web" ]
+
+# docker build -t autojs-web-control -f docker/Dockerfile-prod .
