--- a/server/.env.example
+++ b/server/.env.example
@@ -4,6 +4,7 @@ DB_USER=root
 DB_PASSWORD=123321
 DB_NAME=cloud_auto
 DB_DEBUG=false
+NODE_CONFIG_DIR=
 SERVER_SECRET=
 SERVER_EXPIRES_HOUR=6
 SERVER_LOG_LEVEL=INFO
