--- a/docker/Dockerfile-prod
+++ b/docker/Dockerfile-prod
@@ -45,6 +45,7 @@ ENV DB_HOST=localhost \
   WEB_PORT=9528 \
   WEB_BASE_API=http://47.108.180.116:9319 \
   WEB_WS_HOST=ws://47.108.180.116:9319 \
+  NODE_CONFIG_DIR=./config \
   SERVER_SECRET=xxx&T1G*sd3 \
   SERVER_EXPIRES_HOUR=6 \
   SERVER_SCRIPT_DIR=./scripts \
