--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "@types/ws": "^6.0.3",
     "assign-deep": "^1.0.0",
     "chokidar": "^3.5.3",
+    "config": "^3.3.9",
     "cron": "^1.6.0",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
