--- a/docker/.example.env
+++ b/docker/.example.env
@@ -13,6 +13,7 @@ SERVER_SCRIPT_POLLING_INTERVAL=10000
 VSCODE_EXT_PROXY_ON=true
 VSCODE_EXT_IP=localhost
 VSCODE_EXT_PORT=9317
+VSCODE_EXT_SAVE_ON_RUN=1
 
 WEB_PORT=9528
 WEB_BASE_API=http://localhost:9319
