feat:优化docker构建和运行镜像

--- a/docker/.example.env
+++ b/docker/.example.env
@@ -1,9 +1,9 @@
 DB_HOST=localhost
 DB_PORT=3306
 DB_USER=root
-DB_PASSWORD=123321
+DB_PASSWORD=my-secret-pw
 DB_NAME=cloud_auto
-DB_DEBUG=false
+DB_DEBUG=true
 SERVER_SECRET=
 SERVER_EXPIRES_HOUR=6
 SERVER_SCRIPT_DIR=./scripts
